# PepCluster

./: .gitignore  Cargo.toml  LICENSE  README.md  doc.md  improvements.md  pyproject.toml
.github/workflows/: CI.yml
examples/: peptides.fasta  submit_pepcluster.sh
python/pepcluster/: __init__.py  __main__.py  _core.pyi  cli.py  clustering.py
src/: lib.rs
tests/: test_clustering.py
