[package]
name = "pepcluster"
version = "0.1.0"
edition = "2021"
description = "Rust backend for BLOSUM62-aware anchor-residue clustering of immunopeptides"
license = "MIT"
repository = "https://github.com/AmirAsgary/PepCluster"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
