[package]
name = "pepcluster"
version = "0.1.6"
edition = "2021"
description = "Rust backend for BLOSUM62-aware anchor-residue clustering of immunopeptides"
license = "MIT"
repository = "https://github.com/AmirAsgary/PepCluster"

[lib]
name = "_core"
crate-type = ["cdylib"]

# abi3-py38: build a single stable-ABI wheel per platform that works on
# CPython 3.8+ (including future versions), instead of one wheel per version.
[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
rayon = "1"
