[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pepcluster"
version = "0.1.4"
description = "BLOSUM62-aware anchor-residue clustering for immunopeptides, with a Rust backend"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Amir Asgary", email = "amir.asgary@mpinat.mpg.de" }]
keywords = [
    "bioinformatics",
    "immunopeptidomics",
    "MHC",
    "HLA",
    "peptide",
    "clustering",
    "BLOSUM62",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
pepcluster = "pepcluster.cli:main"

[project.urls]
Homepage = "https://github.com/AmirAsgary/PepCluster"
Repository = "https://github.com/AmirAsgary/PepCluster"
Issues = "https://github.com/AmirAsgary/PepCluster/issues"

[tool.maturin]
python-source = "python"
module-name = "pepcluster._core"
features = ["pyo3/extension-module"]
